@startuml "La Fábrica"


class Fabrica {
    - sucursales:Sucursal[]

    + agregarSucursal(Sucursal):void
    + porcInstrumentosPorTipo(Sucursal):number
    + listarInstrumentos():void

}

class Sucursal {
    - nombre:string
    - instrumentos:Instrumentos[]

    nombreSucursal():string
    instrumentoPorTipo(TipoInstrumento):Instrumento[]
    borrarInstrumento(string):void
    agregarInstrumento(Instrumento):void
    listarInstrumentos():void
    
}

class Instrumento {
    - ID:string
    - precio:number
    - tipoInstrumento:TipoInstrumento

}

enum TipoInstrumento <<enum>> {
    {static} + PERCUCION
    {static} + VIENTO
    {static} + CUERDA
}



Fabrica "1" --> "*" Sucursal: "- sucursales"
Sucursal "1" <-- "*" Instrumento: "- instrumentos"
Instrumento <-- "1" TipoInstrumento: "-tipoInstrumento"

@enduml